- ***BIG CHANGE***: Changed the condition for adjancency of cells; now cells are adjacent if they have any vertices in common - also added some comments to areAdjacent - fixed issue with "All Hexagons" mode - now bottom part of bottom row is not cut off

--- a/SweeperStyles.css
+++ b/SweeperStyles.css
@@ -1,5 +1,4 @@
 body {
-	/* background: cyan; */
 	background-image: url(".\\assets\\IMG_0717_edited.jpg");
 	background-size: cover;
 	color: yellow;
@@ -17,5 +16,5 @@ body {
 }
 
 #size-Selector {
-	width: 4rem;
+	width: 6rem;
 }
